cyborg traits shenanigans

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1019,7 +1019,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_predatory_consumption:0 "Predatory Consumption"
 	trait_tec_predatory_consumption_desc:0 "§LThe strong feast on the weak, the new prey on the old; for this species, the constant cycle of life and death is manifested in a perpetual hunt of those whom they replace.§!"
-	trait_tec_predatory_consumption_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being ['concept_tec_predatory_consumption', §R£job_purge Consumed§!]."
+	trait_tec_predatory_consumption_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being ['concept_tec_predatory_consumption', §R£job_purge Consumed§!]."
 
  	concept_tec_predatory_consumption:0 "Consumed"
 	concept_tec_predatory_consumption_icon:0 "§R£job_purge Consumed§!"
@@ -1035,7 +1035,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_dual_gametoids:0 "Dual Gametoids"
 	trait_tec_dual_gametoids_desc:0 "§LEvolutionary adaptations made this species produce several mirroring embryos, which led to explosive population growth due to multiple viable offsprings per reproductive cycle.§!"
-	trait_tec_dual_gametoids_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G$@trait_tec_dual_gametoids_low_chance_tt$%§! and §G$@trait_tec_dual_gametoids_high_chance_tt$%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet.\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+$@trait_tec_dual_gametoids_upkeep$§!"
+	trait_tec_dual_gametoids_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G$@trait_tec_dual_gametoids_low_chance_tt$%§! and §G$@trait_tec_dual_gametoids_high_chance_tt$%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet.\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+$@trait_tec_dual_gametoids_upkeep$§!"
 
 	trait_tec_celestial_panspermia:0 "Celestial Panspermia"
 	trait_tec_celestial_panspermia_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
@@ -1063,7 +1063,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_decaying_decomposition:0 "Decaying Decomposition"
 	trait_tec_decaying_decomposition_desc:0 "§LThe cycle of death and life is deeply bound to this species, as their body rapidly decays and become a source of new life.§!"
-	trait_tec_decaying_decomposition_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, for another pop to instantly ['concept_tec_decaying_decomposition', §R£job_purge Wither§!].\n\nPops killed due to Purges, Planetary Bombardments or Rituals are considered as §R£job_purge Withered§!."
+	trait_tec_decaying_decomposition_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, for another pop to instantly ['concept_tec_decaying_decomposition', §R£job_purge Wither§!].\n\nPops killed due to Purges, Planetary Bombardments or Rituals are considered as §R£job_purge Withered§!."
 
  	concept_tec_decaying_decomposition:0 "Withering Decomposition"
 	concept_tec_decaying_decomposition_icon:0 "§R£job_purge§!"
@@ -1079,7 +1079,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_zombification:0 "Necrotic Zombification"
 	trait_tec_zombification_desc:0 "§LDeath doesn't mean an end for this species, as part of its population raise after its demise, haunting and preying upon the living or serving as mindless workforce, driven by the most basic instincts.§!"
-	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of Zombie pops on the planet, for succumb to['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
+	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G10%§! and §G30%§! chance, proportional to the number of Zombie pops on the planet, for succumb to ['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
 
  	concept_tec_zombification:0 "Zombification"
 	concept_tec_zombification_icon:0 "§R£job_purge Zombification§!"
@@ -1251,6 +1251,14 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_unemployed_subsistence_lithoid:0 "Innate Mineralization"
 	trait_tec_unemployed_subsistence_lithoid_desc:0 "$trait_tec_unemployed_subsistence_desc$"
 	trait_tec_unemployed_subsistence_lithoid_effect:0 "$mod_planet_pops_unemployed_minerals_produces_add$: §G+1§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+
+	trait_tec_selective_equilibrium:0 "Evolutive Equilibrium"
+	trait_tec_selective_equilibrium_desc:0 "§LThe specific niches this species have evolved to fit drive the perfect balance between numbers and opportunity, caring their dependant and frail descendance with high attention, ensuring overall survival on the long term.§!"
+	trait_tec_selective_equilibrium_effect:0 "TODO effect increases per pop grown of this speciesTODO reduced growth TODO increased output"
+
+	trait_tec_selective_proliferation:0 "Driven Proliferation"
+	trait_tec_selective_proliferation_desc:0 "§LAdaptive changes on the way the species reproduce ensure an explossive growth rate to divert into several niches. However, there are low chances that offspring survives, as more will fulfill their place if needed.§!"
+	trait_tec_selective_proliferation_effect:0 "TODO effect increases per pop grown of this speciesTODO increased growth TODO pops have a chance to die when grown equal to the growth bonus"
  # /
 
  # --------------- Robotic
