--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1342,9 +1342,9 @@
 	trait_tec_cyborg_internal_septic_desc:0 "§LComplementary cybernetic devices, allocated in multiple parts of the body, constantly filter and distribute enhancing substances in the bloodstream, allows a longer lifespan, faster bodily adaptation to foreign environments and near total immunity to diseases.§!"
 	trait_tec_cyborg_internal_septic_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_internal_intergumentary:0 "Intergumentary Augmentation"
-	trait_tec_cyborg_internal_intergumentary_desc:0 "§LNano-fibers and cybernetic webs traverse the entire bodily surface, serving as a reinforcement of the intergumentary system of this species and interface with other cybernetic traits.§!"
-	trait_tec_cyborg_internal_intergumentary_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_internal_integumentary:0 "Integumentary Augmentation"
+	trait_tec_cyborg_internal_integumentary_desc:0 "§LNano-fibers and cybernetic webs traverse the entire bodily surface, serving as a reinforcement of the integumentary system of this species and interface with other cybernetic traits.§!"
+	trait_tec_cyborg_internal_integumentary_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_retrofit:0 "Internal Retrofitters"
 	trait_tec_cyborg_internal_retrofit_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
@@ -1404,7 +1404,7 @@
 	trait_tec_cyborg_external_climate_dry_desc:0 "§LMicro-panels located around the external parts of this species serve as a way to expel excess heat when augments are overloaded or environmental conditions involve an intensely warm temperature.§!"
 	trait_tec_cyborg_external_climate_dry_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_external_climate_wet:0 "Hydrolitic Protectors"
+	trait_tec_cyborg_external_climate_wet:0 "Hydrolytic Protectors"
 	trait_tec_cyborg_external_climate_wet_desc:0 "§LSmall emitters serve as hydrophobic protection layer against any kind of wetness that may interfer with the correct functioning of the augmentations of this species.§!"
 	trait_tec_cyborg_external_climate_wet_effect:0 "§YTODO ASCENSION§!"
 
