--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2449,7 +2449,58 @@
 		concept_tec_right_option_military_service_none_icon: "£policy£ $military_service_none$ Species Right"
 		concept_tec_right_option_military_service_none_alias_icon: "£policy£ $military_service_none$"
 		concept_tec_right_option_military_service_none_desc: "§YOption of ['concept_tec_right_military_service_alias_icon']§!\n\n$military_service_none_tooltip$"
- # /
+
+	concept_tec_right_slavery: "$SPECIES_RIGHT_SLAVERY_TYPE$ Species Right"
+	concept_tec_right_slavery_alias: "$SPECIES_RIGHT_SLAVERY_TYPE$"
+	concept_tec_right_slavery_icon: "£policy£ $SPECIES_RIGHT_SLAVERY_TYPE$ Species Right"
+	concept_tec_right_slavery_alias_icon: "£policy£ $SPECIES_RIGHT_SLAVERY_TYPE$"
+	concept_tec_right_slavery_desc: "Options:\n - ['concept_tec_right_option_slavery_normal_alias']\n - ['concept_tec_right_option_slavery_domestic_alias']\n - ['concept_tec_right_option_slavery_military_alias']\n - ['concept_tec_right_option_slavery_indentured_alias']\n - ['concept_tec_right_option_slavery_matrix_alias']\n - ['concept_tec_right_option_slavery_livestock_alias']\n - ['concept_tec_right_option_slavery_matrix_guided_sapience_alias']"
+
+	concept_tec_right_option_slavery_normal: "$slavery_normal$ Species Right"
+	concept_tec_right_option_slavery_normal_alias: "$slavery_normal$"
+	concept_tec_right_option_slavery_normal_icon: "£policy£ $slavery_normal$ Species Right"
+	concept_tec_right_option_slavery_normal_alias_icon: "£policy£ $slavery_normal$"
+	concept_tec_right_option_slavery_normal_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$mod_planet_jobs_produces_mult$: §G+10%§!\n$MOD_POP_HAPPINESS$: §R-30%§!\n\n$slavery_normal_tooltip$"
+
+	concept_tec_right_option_slavery_domestic: "$slavery_domestic$ Species Right"
+	concept_tec_right_option_slavery_domestic_alias: "$slavery_domestic$"
+	concept_tec_right_option_slavery_domestic_icon: "£policy£ $slavery_domestic$ Species Right"
+	concept_tec_right_option_slavery_domestic_alias_icon: "£policy£ $slavery_domestic$"
+	concept_tec_right_option_slavery_domestic_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_POP_HAPPINESS$: §R-20%§!\n\n$slavery_domestic_tooltip$"
+	
+	concept_tec_right_option_slavery_military: "$slavery_military$ Species Right"
+	concept_tec_right_option_slavery_military_alias: "$slavery_military$"
+	concept_tec_right_option_slavery_military_icon: "£policy£ $slavery_military$ Species Right"
+	concept_tec_right_option_slavery_military_alias_icon: "£policy£ $slavery_military$"
+	concept_tec_right_option_slavery_military_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_ARMY_DAMAGE_MULT$: §G+20%§!\n$MOD_POP_HAPPINESS$: §R-20%§!\n\n$slavery_military_tooltip$"
+
+
+	concept_tec_right_option_slavery_indentured: "$slavery_indentured$ Species Right"
+	concept_tec_right_option_slavery_indentured_alias: "$slavery_indentured$"
+	concept_tec_right_option_slavery_indentured_icon: "£policy£ $slavery_indentured$ Species Right"
+	concept_tec_right_option_slavery_indentured_alias_icon: "£policy£ $slavery_indentured$"
+	concept_tec_right_option_slavery_indentured_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_POP_HAPPINESS$: §R-20%§!\n$MOD_POP_POLITICAL_POWER$: §Y+0.50§!\n\n$slavery_indentured_tooltip$"
+
+
+	concept_tec_right_option_slavery_matrix: "$slavery_matrix$ Species Right"
+	concept_tec_right_option_slavery_matrix_alias: "$slavery_matrix$"
+	concept_tec_right_option_slavery_matrix_icon: "£policy£ $slavery_matrix$ Species Right"
+	concept_tec_right_option_slavery_matrix_alias_icon: "£policy£ $slavery_matrix$"
+	concept_tec_right_option_slavery_matrix_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_POP_HAPPINESS$: §R-40%§!\n\n$slavery_matrix_tooltip$"
+
+	concept_tec_right_option_slavery_livestock: "$slavery_livestock$ Species Right"
+	concept_tec_right_option_slavery_livestock_alias: "$slavery_livestock$"
+	concept_tec_right_option_slavery_livestock_icon: "£policy£ $slavery_livestock$ Species Right"
+	concept_tec_right_option_slavery_livestock_alias_icon: "£policy£ $slavery_livestock$"
+	concept_tec_right_option_slavery_livestock_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_POP_HAPPINESS$: §R-40%§!\n\n$slavery_livestock_tooltip$"
+
+
+	concept_tec_right_option_slavery_matrix_guided_sapience: "$slavery_matrix_guided_sapience$ Species Right"
+	concept_tec_right_option_slavery_matrix_guided_sapience_alias: "$slavery_matrix_guided_sapience$"
+	concept_tec_right_option_slavery_matrix_guided_sapience_icon: "£policy£ $slavery_matrix_guided_sapience$ Species Right"
+	concept_tec_right_option_slavery_matrix_guided_sapience_alias_icon: "£policy£ $slavery_matrix_guided_sapience$"
+	concept_tec_right_option_slavery_matrix_guided_sapience_desc: "§YOption of ['concept_tec_right_slavery_alias_icon']§!\n\n$MOD_POP_HAPPINESS$: §G+10%§!"
+	# /
 
  # Buildings
 	concept_tec_ethic_building_temple: "Temples"
@@ -2465,6 +2516,7 @@
 	concept_tec_ethic_building_entrepreneur_desc: "Entrepreneur Buildings are buildings whose price is cheaper than their normal equivalent, and which provide ['concept_tec_hired_jobs', $tec_loc_trade_value_icon$ $concept_tec_hired_jobs$].\n\nEntrepreneur Buildings consist of:\n- ['building:building_tec_entepre_forge']\n- ['building:building_tec_entepre_factory']\n- ['building:building_tec_entepre_research']\n- ['building:building_tec_entepre_theatres']"
 
 	concept_tec_hired_jobs: "$tec_private_hired$ Jobs"
+	concept_tec_hired_jobs_icon: "£job£ $concept_tec_hired_jobs$"
 	concept_tec_hired_jobs_desc: "$tec_private_hired$ Jobs are jobs which mimic another job, with §Rless output§! in exchange for §Gless upkeep§! and extra §Y$tec_loc_trade_value$§!. Their production can generally be boosted by having §Y$BRANCH_OFFICES$§! on the planet, and by having their §Y£building£ Capital Buildings§! upgraded.\n\n$tec_private_hired$ Jobs consist of:\n- ['concept_tec_worker_job_tec_hired_miner']\n- ['concept_tec_worker_job_tec_hired_farmer']\n- ['concept_tec_worker_job_tec_hired_technician']\n- ['concept_tec_worker_job_tec_hired_soldier']\n- ['concept_tec_worker_job_tec_hired_foundry']\n- ['concept_tec_worker_job_tec_hired_catalytic']\n- ['concept_tec_worker_job_tec_hired_artisan']\n- ['concept_tec_worker_job_tec_hired_researcher']\n- ['concept_tec_worker_job_tec_hired_entertainer']"
  # /
  # Mechanics
@@ -2975,7 +3027,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_foundry_icon: "$concept_tec_effect_foundry_alias_icon$ Effect Category"
 	concept_tec_effect_foundry_alias: "$job_foundry_plural$"
 	concept_tec_effect_foundry_alias_icon: "£job_foundry£ $job_foundry_plural$"
-	concept_tec_effect_foundry_desc: "This category of jobs is mainly consisting of §Y$tec_loc_alloys$§! Jobs."
+	concept_tec_effect_foundry_desc: "This category of $tec_loc_jobs$ is mainly consisting of §Y$tec_loc_alloys$§! Jobs."
 	mod_tec_effect_foundry_tag: "§EEffect Category: ['concept_tec_effect_foundry_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_foundry_tag_short: ""
 
@@ -2983,7 +3035,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_artisan_icon: "$concept_tec_effect_artisan_alias_icon$ Effect Category"
 	concept_tec_effect_artisan_alias: "$job_artisan_plural$"
 	concept_tec_effect_artisan_alias_icon: "£job_artisan£ $job_artisan_plural$"
-	concept_tec_effect_artisan_desc: "This category of jobs is mainly consisting of §Y$tec_loc_consumer_goods$§! Jobs."
+	concept_tec_effect_artisan_desc: "This category of $tec_loc_jobs$ is mainly consisting of §Y$tec_loc_consumer_goods$§! Jobs."
 	mod_tec_effect_artisan_tag: "§EEffect Category: ['concept_tec_effect_artisan_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_artisan_tag_short: ""
 
@@ -2991,7 +3043,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_colonist_icon: "$concept_tec_effect_colonist_alias_icon$ Effect Category"
 	concept_tec_effect_colonist_alias: "$job_colonist_plural$"
 	concept_tec_effect_colonist_alias_icon: "£job_colonist£ $job_colonist_plural$"
-	concept_tec_effect_colonist_desc: "This category of jobs that are mainly consisting of jobs given by Colony Capitals."
+	concept_tec_effect_colonist_desc: "This category of $tec_loc_jobs$ that are mainly consisting of jobs given by Colony Capitals."
 	mod_tec_effect_colonist_tag: "§EEffect Category: ['concept_tec_effect_colonist_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_colonist_tag_short: ""
 
@@ -2999,7 +3051,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_clerk_icon: "$concept_tec_effect_clerk_alias_icon$ Effect Category"
 	concept_tec_effect_clerk_alias: "$job_clerk_plural$"
 	concept_tec_effect_clerk_alias_icon: "£job_clerk£ $job_clerk_plural$"
-	concept_tec_effect_clerk_desc: "This category of jobs that are given by ['concept_tec_housing_district', Housing] Districts and ['concept_tec_trade_buildings', Trade] Buildings."
+	concept_tec_effect_clerk_desc: "This category of $tec_loc_jobs$ that are given by ['concept_tec_housing_district', Housing] Districts and ['concept_tec_trade_buildings', Trade] Buildings."
 	mod_tec_effect_clerk_tag: "§EEffect Category: ['concept_tec_effect_clerk_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_clerk_tag_short: ""
 
@@ -3007,7 +3059,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_miner_icon: "$concept_tec_effect_miner_alias_icon$ Effect Category"
 	concept_tec_effect_miner_alias: "$job_miner_plural$"
 	concept_tec_effect_miner_alias_icon: "£job_miner£ $job_miner_plural$"
-	concept_tec_effect_miner_desc: "This category of jobs is mainly consisting of §Y$tec_loc_minerals$§! Jobs."
+	concept_tec_effect_miner_desc: "This category of $tec_loc_jobs$ is mainly consisting of §Y$tec_loc_minerals$§! Jobs."
 	mod_tec_effect_miner_tag: "§EEffect Category: ['concept_tec_effect_miner_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_miner_tag_short: ""
 
@@ -3015,7 +3067,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_farmer_icon: "$concept_tec_effect_farmer_alias_icon$ Effect Category"
 	concept_tec_effect_farmer_alias: "$job_farmer_plural$"
 	concept_tec_effect_farmer_alias_icon: "£job_farmer£ $job_farmer_plural$"
-	concept_tec_effect_farmer_desc: "This category of jobs is mainly consisting of §Y$tec_loc_food$§! Jobs."
+	concept_tec_effect_farmer_desc: "This category of $tec_loc_jobs$ is mainly consisting of §Y$tec_loc_food$§! Jobs."
 	mod_tec_effect_farmer_tag: "§EEffect Category: ['concept_tec_effect_farmer_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_farmer_tag_short: ""
 
@@ -3024,7 +3076,7 @@ mod_tec_effect_administrator_tag_short: ""
 	concept_tec_effect_technician_icon: "$concept_tec_effect_technician_alias_icon$ Effect Category"
 	concept_tec_effect_technician_alias: "$job_technician_plural$"
 	concept_tec_effect_technician_alias_icon: "£job_technician£ $job_technician_plural$"
-	concept_tec_effect_technician_desc: "This category of jobs is mainly consisting of §Y$tec_loc_energy$§! Jobs."
+	concept_tec_effect_technician_desc: "This category of $tec_loc_jobs$ is mainly consisting of §Y$tec_loc_energy$§! Jobs."
 	mod_tec_effect_technician_tag: "§EEffect Category: ['concept_tec_effect_technician_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 	mod_tec_effect_technician_tag_short: ""
 
@@ -3034,7 +3086,7 @@ mod_tec_effect_administrator_tag_short: ""
 concept_tec_effect_researcher_icon: "$concept_tec_effect_researcher_alias_icon$ Effect Category"
 concept_tec_effect_researcher_alias: "$job_researcher_plural$"
 concept_tec_effect_researcher_alias_icon: "£job_researcher£ $job_researcher_plural$"
-concept_tec_effect_researcher_desc: "This category of jobs is including all §Y$tec_loc_research_resources$ Jobs§! and a few non research specific jobs."
+concept_tec_effect_researcher_desc: "This category of $tec_loc_jobs$ is including all §Y$tec_loc_research_resources$ Jobs§! and a few non research specific jobs."
 mod_tec_effect_researcher_tag: "§EEffect Category: ['concept_tec_effect_researcher_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 mod_tec_effect_researcher_tag_short: ""
 
@@ -3042,7 +3094,22 @@ concept_tec_effect_bio_trophy: "$concept_tec_effect_bio_trophy_alias$ Effect Cat
 concept_tec_effect_bio_trophy_icon: "$concept_tec_effect_bio_trophy_alias_icon$ Effect Category"
 concept_tec_effect_bio_trophy_alias: "$job_bio_trophy_plural$"
 concept_tec_effect_bio_trophy_alias_icon: "£job_bio_trophy£ $job_bio_trophy_plural$"
-concept_tec_effect_bio_trophy_desc: "This category of jobs is mainly of Pops that live under the ['concept_tec_'] §Y$tec_loc_energy$§! Jobs."
+concept_tec_effect_bio_trophy_desc: "This category of $tec_loc_jobs$ is mainly of Pops that live under the ['concept_tec_living_standard_organic_trophy_alias_icon'] Living Standard."
 mod_tec_effect_bio_trophy_tag: "§EEffect Category: ['concept_tec_effect_bio_trophy_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
 mod_tec_effect_bio_trophy_tag_short: ""
 
+concept_tec_effect_livestock: "$concept_tec_effect_livestock_alias$ Effect Category"
+concept_tec_effect_livestock_icon: "$concept_tec_effect_livestock_alias_icon$ Effect Category"
+concept_tec_effect_livestock_alias: "$job_livestock_plural$"
+concept_tec_effect_livestock_alias_icon: "£job_livestock£ $job_livestock_plural$"
+concept_tec_effect_livestock_desc: "This category of $tec_loc_jobs$ is mainly of Pops that live under the ['concept_tec_right_option_slavery_livestock_alias_icon'] Slavery Type, with the exception of jobs like §Y£job_livestock_zoo_animal£ $job_livestock_zoo_animal$§! and §Y£job_livestock_zoo_beast£ $job_livestock_zoo_beast$§!. ['concept_tec_worker_job_tec_labrat_plural_icon'] are also some of the few other $tec_loc_jobs$ in this category."
+mod_tec_effect_livestock_tag: "§EEffect Category: ['concept_tec_effect_livestock_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
+mod_tec_effect_livestock_tag_short: ""
+
+concept_tec_effect_organic_batteries: "$concept_tec_effect_organic_batteries_alias$ Effect Category"
+concept_tec_effect_organic_batteries_icon: "$concept_tec_effect_organic_batteries_alias_icon$ Effect Category"
+concept_tec_effect_organic_batteries_alias: "$job_organic_battery_plural$"
+concept_tec_effect_organic_batteries_alias_icon: "£job_organic_battery£ $job_organic_battery_plural$"
+concept_tec_effect_organic_batteries_desc: "This category of $tec_loc_jobs$ is mainly of Pops that live under the ['concept_tec_right_option_slavery_matrix_alias_icon'] Slavery Type."
+mod_tec_effect_organic_batteries_tag: "§EEffect Category: ['concept_tec_effect_organic_batteries_alias_icon']§! ['concept_tec_effect_category_pin_icon']"
+mod_tec_effect_organic_batteries_tag_short: ""
