fix(T-1206 & T-1207): natural synchronicity trait tooltip fix and industrial sidereal converting districts

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -223,7 +223,7 @@
  # Terraforming APs
 
 	tec_ap_terraforming_steps:0 "\n\n§HTier I - Terraforming Path Finisher§!"
-	tec_ap_world_shapers_affinity_tooltip:0 "Species with the §Y$trait_tec_natural_sync$§! trait gain 50% greater benefits for living on §YPerfect§! worlds, but penalties for living on non-§YPerfect§! worlds are likewise amplified."
+	tec_ap_world_shapers_affinity_tooltip:0 "Species with the ['trait:trait_tec_natural_sync'] Trait have their §YPop Growth§!, §YAssembly§! and §RPenalties§! by §Y50%§!, and an extra §G+10%§! $mod_planet_jobs_produces_mult$ on §Y$concept_tec_perfect_planets$§!"
 
  # --------- Requirements --------------
 	# pure paths
