--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -262,7 +262,7 @@
 
 	trait_tec_natural_sync:0 "Natural Synchrony"
 	trait_tec_natural_sync_desc:0 "§LThis species thrives in Perfect Worlds, knowing each kind of species and constantly caring each minimum aspect of the world, giving a innate ability to communicate with the planet itself, and benefit from it's goods. If separated from such natural wonders, it suffers immensely in both physical and psychological ways.§!"
-	trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth_icon$ Pop Growth and Assembly on ['concept_tec_perfect_planets']: §G+10%§!\n$mod_perfect_planet_jobs_produces_mult$ per $tec_loc_pop$: §G+0.25%§!\n\nThe ['ascension_perk:ap_world_shaper',£unity£ $ap_world_shaper$] Ascension Perk amplifies this trait's effects.\nThese effects are §RInverted§! on £planet£ §YNon-Perfect Planets§!"
+	trait_tec_natural_sync_tooltip: "On ['concept_tec_perfect_planets']:\n$t$$tec_loc_pop_growth_icon$ Pop Growth and Assembly: §G+20%§!\n$t$$mod_planet_jobs_produces_mult$ per $tec_loc_pop$: §G+0.25%§!\n\nOn §Rnon§!-§YPerfect Planets§!:\n$t$$tec_loc_pop_growth_icon$ Pop Growth and Assembly: §R-10%§!\n$t$$mod_planet_jobs_produces_mult$: §R-10%§!\n$t$$mod_planet_jobs_upkeep_mult$: §R+20%§!\n\nThe ['ascension_perk:ap_world_shaper',£unity£ $ap_world_shaper$] Ascension Perk amplifies this trait's §YPop Growth§!, §YAssembly§! and §RPenalties§! by §Y50%§!, and an extra §G+10%§! $mod_planet_jobs_produces_mult$ on §Y$concept_tec_perfect_planets$§!"
 
 	trait_tec_natural_sync_bad:0 "Natural Synchrony"
 	trait_tec_natural_sync_bad_desc:0 "§LThis species thrives in Gaia Worlds, suffering a tremendous hit to their development outside such natural wonders.§!"
