--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -37,5 +37,5 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
  not_allowed_for_tec_satellite: "$TRIGGER_FAIL$Not allowed for §Y$preset_tec_satellite$§! preset."
  tec_satellite_vassal_not_allowed: "$TRIGGER_FAIL$Not allowed for §Y$preset_tec_satellite$§! Vassals."
 
- subject_tec_satellite_term: "This agreement counts as half of a §YVassal§! towards §Y$divided_patronage$§!"
+ subject_tec_satellite_term: "This agreement counts as half of a §YSubject§! towards §Y$divided_patronage$§!"
  tec_overlord_is_apathic:0 "$TRIGGER_FAIL$§ROur empire does not care due to our $ethic_gestalt_apathy$§!"
