annoying visual studio merge denied by a single file eats my soul

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -419,7 +419,7 @@
 	ap_engineered_evolution_biogenics:0 "Forced Evolution"
 	ap_engineered_evolution_biogenics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n§LWe have taken the reins of our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
-	ap_engineered_evolution_biogenics_tooltip:0 "$tec_loc_ap_chosen_path$ §GBiogenics§!\n§LWe have discovered a way to produce adaptive micro-mutations in the genetic structure of our species.§!\n\n$tec_loc_ap_u_feature$ §HTODO§!\n- TODO"
+	ap_engineered_evolution_biogenics_tooltip:0 "$tec_loc_ap_chosen_path$ §GBiogenics§!\n§LWe have discovered a way to produce adaptive micro-mutations in the genetic structure of our species.§!\n\n$tec_loc_ap_u_feature$ §HMalleable Adaptation§!\n- Each §YNegative Trait§! increases the amount of available genetic points by §G1§!, allowing more diverse Biological Species modifications."
 	ap_engineered_evolution_biogenics_tradition:0 "\n$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_tec_biogenics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_biogenics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
 # /
